@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-12-19T01:00:35Z",
+  "timestamp" : "2023-12-19T08:17:06Z",
   "count_outdated" : 3369,
   "uniques_outdated" : 1430,
-  "count" : 3415,
-  "uniques" : 1464,
+  "count" : 3416,
+  "uniques" : 1465,
   "clones" : [
     {
       "timestamp": "2023-12-05T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
