@@ -1,5 +1,5 @@
 {
-  "count": 46,
+  "count": 47,
   "uniques": 27,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2023-12-18T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-19T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
