@@ -1,3 +1,12 @@
+2023-12-19T08:17:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7259117161 # 2184
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-19
+* notice: last 14d: unq all: 27 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 1430 3369 / 1464 3415
+* notice: next accum: outdated-unq outdated-all / unq all: 1430 3369 / 1465 3416
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-12-19]
+
 2023-12-19T01:00:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7255889293 # 2183
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-19
